--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Publications markdown generator for academicpages\n",
     "\n",
@@ -32,9 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -62,12 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -86,17 +77,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -113,67 +113,39 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2009-10-01</td>\n",
-       "      <td>Paper Title Number 1</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 1. The number 2...</td>\n",
-       "      <td>Your Name, You. (2009). \"Paper Title Number 1....</td>\n",
-       "      <td>paper-title-number-1</td>\n",
-       "      <td>http://academicpages.github.io/files/paper1.pdf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2010-10-01</td>\n",
-       "      <td>Paper Title Number 2</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 2. The number 3...</td>\n",
-       "      <td>Your Name, You. (2010). \"Paper Title Number 2....</td>\n",
-       "      <td>paper-title-number-2</td>\n",
-       "      <td>http://academicpages.github.io/files/paper2.pdf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2015-10-01</td>\n",
-       "      <td>Paper Title Number 3</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 3. The number 4...</td>\n",
-       "      <td>Your Name, You. (2015). \"Paper Title Number 3....</td>\n",
-       "      <td>paper-title-number-3</td>\n",
-       "      <td>http://academicpages.github.io/files/paper3.pdf</td>\n",
+       "      <td>12-15-2016</td>\n",
+       "      <td>Receptor Tyrosine Kinase MET Interactome and N...</td>\n",
+       "      <td>Biological Psychiatry</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>hihui Xie, Jing Li, Jonathan M. Baker, Kathie ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://www.ncbi.nlm.nih.gov/pubmed/27086544</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     pub_date                 title      venue  \\\n",
-       "0  2009-10-01  Paper Title Number 1  Journal 1   \n",
-       "1  2010-10-01  Paper Title Number 2  Journal 1   \n",
-       "2  2015-10-01  Paper Title Number 3  Journal 1   \n",
+       "     pub_date                                              title  \\\n",
+       "0  12-15-2016  Receptor Tyrosine Kinase MET Interactome and N...   \n",
        "\n",
-       "                                             excerpt  \\\n",
-       "0  This paper is about the number 1. The number 2...   \n",
-       "1  This paper is about the number 2. The number 3...   \n",
-       "2  This paper is about the number 3. The number 4...   \n",
+       "                   venue  excerpt  \\\n",
+       "0  Biological Psychiatry      NaN   \n",
        "\n",
-       "                                            citation              url_slug  \\\n",
-       "0  Your Name, You. (2009). \"Paper Title Number 1....  paper-title-number-1   \n",
-       "1  Your Name, You. (2010). \"Paper Title Number 2....  paper-title-number-2   \n",
-       "2  Your Name, You. (2015). \"Paper Title Number 3....  paper-title-number-3   \n",
+       "                                            citation  url_slug  \\\n",
+       "0  hihui Xie, Jing Li, Jonathan M. Baker, Kathie ...       NaN   \n",
        "\n",
-       "                                         paper_url  \n",
-       "0  http://academicpages.github.io/files/paper1.pdf  \n",
-       "1  http://academicpages.github.io/files/paper2.pdf  \n",
-       "2  http://academicpages.github.io/files/paper3.pdf  "
+       "                                      paper_url  \n",
+       "0  https://www.ncbi.nlm.nih.gov/pubmed/27086544  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "publications = pd.read_csv(\"publications.tsv\", sep=\"\\t\", header=0)\n",
+    "publications = pd.read_csv(\"/Users/jonathan-baker/Downloads/publications.tsv\", sep=\"\\t\", header=0)\n",
     "publications\n"
    ]
   },
@@ -188,12 +160,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "html_escape_table = {\n",
@@ -218,13 +186,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"float\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-592da968cbd3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpublications\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mmd_filename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpub_date\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"-\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0murl_slug\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\".md\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mhtml_filename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpub_date\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"-\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0murl_slug\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0myear\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpub_date\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"float\") to str"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "for row, item in publications.iterrows():\n",
@@ -281,11 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -303,11 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -339,9 +307,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
@@ -363,9 +329,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
