--- a/_publications/12-15-2016-2016-met.md
+++ b/_publications/12-15-2016-2016-met.md
@@ -5,8 +5,8 @@ permalink: /publication/12-15-2016-2016-met
 date: 12-15-2016
 venue: 'Biological Psychiatry'
 paperurl: 'https://www.ncbi.nlm.nih.gov/pubmed/27086544'
-citation: 'hihui Xie, Jing Li, Jonathan M. Baker, Kathie L. Eagleson, Marcelo P. Coba, Pat Levitt. Receptor Tyrosine Kinase MET Interactome and Neurodevelopmental Disorder Partners at the Developing Synapse. Biological Psychiatry, 2016.'
+citation: 'Xhihui Xie, Jing Li, Jonathan M. Baker, Kathie L. Eagleson, Marcelo P. Coba, Pat Levitt. Receptor Tyrosine Kinase MET Interactome and Neurodevelopmental Disorder Partners at the Developing Synapse. Biological Psychiatry, 2016.'
 ---
 [Download paper here](https://www.ncbi.nlm.nih.gov/pubmed/27086544)
 
-Recommended citation: hihui Xie, Jing Li, Jonathan M. Baker, Kathie L. Eagleson, Marcelo P. Coba, Pat Levitt. Receptor Tyrosine Kinase MET Interactome and Neurodevelopmental Disorder Partners at the Developing Synapse. Biological Psychiatry, 2016.
+Recommended citation: Xhihui Xie, Jing Li, Jonathan M. Baker, Kathie L. Eagleson, Marcelo P. Coba, Pat Levitt. Receptor Tyrosine Kinase MET Interactome and Neurodevelopmental Disorder Partners at the Developing Synapse. Biological Psychiatry, 2016.
