removed fake files

--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "      <td>Biological Psychiatry</td>\n",
        "      <td>NaN</td>\n",
        "      <td>hihui Xie, Jing Li, Jonathan M. Baker, Kathie ...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2016-met</td>\n",
        "      <td>https://www.ncbi.nlm.nih.gov/pubmed/27086544</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -133,13 +133,13 @@
        "0  Biological Psychiatry      NaN   \n",
        "\n",
        "                                            citation  url_slug  \\\n",
-       "0  hihui Xie, Jing Li, Jonathan M. Baker, Kathie ...       NaN   \n",
+       "0  hihui Xie, Jing Li, Jonathan M. Baker, Kathie ...  2016-met   \n",
        "\n",
        "                                      paper_url  \n",
        "0  https://www.ncbi.nlm.nih.gov/pubmed/27086544  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,21 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"float\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-592da968cbd3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpublications\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mmd_filename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpub_date\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"-\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0murl_slug\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\".md\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mhtml_filename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpub_date\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"-\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0murl_slug\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0myear\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpub_date\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"float\") to str"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "for row, item in publications.iterrows():\n",
@@ -256,15 +244,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2009-10-01-paper-title-number-1.md  2015-10-01-paper-title-number-3.md\r\n",
-      "2010-10-01-paper-title-number-2.md\r\n"
+      "12-15-2016-2016-met.md             2015-10-01-paper-title-number-3.md\r\n",
+      "2010-10-01-paper-title-number-2.md 2016-MET.md\r\n"
      ]
     }
    ],
@@ -274,28 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---\r\n",
-      "title: \"Paper Title Number 1\"\r\n",
-      "collection: publications\r\n",
-      "permalink: /publication/2009-10-01-paper-title-number-1\r\n",
-      "excerpt: 'This paper is about the number 1. The number 2 is left for future work.'\r\n",
-      "date: 2009-10-01\r\n",
-      "venue: 'Journal 1'\r\n",
-      "paperurl: 'http://academicpages.github.io/files/paper1.pdf'\r\n",
-      "citation: 'Your Name, You. (2009). &quot;Paper Title Number 1.&quot; <i>Journal 1</i>. 1(1).'\r\n",
-      "---\r\n",
-      "This paper is about the number 1. The number 2 is left for future work.\r\n",
-      "\r\n",
-      "[Download paper here](http://academicpages.github.io/files/paper1.pdf)\r\n",
-      "\r\n",
-      "Recommended citation: Your Name, You. (2009). \"Paper Title Number 1.\" <i>Journal 1</i>. 1(1)."
+      "cat: ../_publications/2009-10-01-paper-title-number-1.md: No such file or directory\r\n"
      ]
     }
    ],
